--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   fluttertoast: ^7.1.0
   http: ^0.12.2
   json_annotation: ^3.0.1
+  dio: 3.0.10
 
 dev_dependencies:
   flutter_test:
